--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -1,12 +1,15 @@
+.navigation-container{
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;}
 .navigation{
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 1% 4%;
-    background-color: #D9B29C;
+    margin: 0% 3%;
 }
 .logo h1{
     letter-spacing: 5px;
+    font-weight: 400;
 }
 .admin_profile{
     display: flex;
@@ -14,12 +17,17 @@
     justify-content: center;
 }
 .admin_profile .avatar {
-    border-radius: 50%;
-    margin-inline: 20px;
+    margin-inline: 18px;
     cursor: pointer;
 }
 .avatar img{
     border-radius: 50%;
-    height: 60px;
-    width: 60px;
+    height: 35px;
+    width: 35px;
+    object-fit: fill;
+}
+.avatar_details p {
+    font-size: 12px;
+    letter-spacing: 1px;
+    font-weight: 300;
 }
